--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,6 +1,6 @@
-<div class="grid grid-cols-[280px_1fr] h-full w-full">
+<div class="grid grid-cols-[280px_1fr] h-screen w-full">
   <app-sidebar class="h-full border-r border-r-black"></app-sidebar>
-  <div class="h-full">
+  <div class="h-full overflow-auto">
     <router-outlet></router-outlet>
   </div>
 </div>
