refactor: rename 'revisoesHoje' to 'reviewsToday' and update date formatting

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
           <div
             class="w-5 h-5 flex justify-center items-center text-red-600 rounded-full"
           >
-            {{ revisoesHoje.length }}
+            {{ reviewsToday.length }}
           </div>
         </div>
       </li>
