--- a/src/app/components/revisoes-hoje/revisoes-hoje.component.html
+++ b/src/app/components/revisoes-hoje/revisoes-hoje.component.html
@@ -1,12 +1,12 @@
 <div class="p-6 flex flex-col">
-  <h1 class="text-[40px] mb-6">Revisões agendadas</h1>
+  <h1 class="text-[40px] mb-6">Revisões agendadas para hoje</h1>
   <div class="flex flex-col gap-4">
     @for (content of reviewsToday; track content.id) {
     <div class="bg-white p-4 rounded shadow flex flex-col gap-2">
       <div class="flex justify-between">
         <span class="font-bold">{{ content.titulo }}</span>
         <button
-          class="bg-black text-white p-2 rounded-full cursor-pointer"
+          class="bg-black text-white p-2.5 rounded-full cursor-pointer"
           (click)="lastReview(content.id)"
         >
           Revisão feita
