--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -8,14 +8,21 @@
       </li>
       <li>
         <div class="flex items-center">
-          <a routerLink="/revisoes" class="hover:text-blue-500"
-            >Revisões agendadas</a
+          <a routerLink="/reviews/today" class="hover:text-blue-500"
+            >Revisões para hoje</a
           >
           <div
             class="w-5 h-5 flex justify-center items-center text-red-600 rounded-full"
           >
             {{ reviewsToday.length }}
           </div>
+        </div>
+      </li>
+      <li>
+        <div class="flex items-center">
+          <a routerLink="reviews/forget" class="hover:text-blue-500"
+            >Revisões esquecidas</a
+          >
         </div>
       </li>
     </ul>
