refactor: simplify forgotten reviews logic

--- a/src/app/components/forgotten-reviews/forgotten-reviews.component.html
+++ b/src/app/components/forgotten-reviews/forgotten-reviews.component.html
@@ -7,7 +7,7 @@
         <span class="font-bold">{{ content.titulo }}</span>
         <button
           class="bg-black text-white p-2.5 rounded-full cursor-pointer"
-          (click)="lastReview(content.id)"
+          (click)="lastReview(content)"
         >
           Revisão feita
         </button>
