--- a/src/app/components/card-review/card-review.component.html
+++ b/src/app/components/card-review/card-review.component.html
@@ -10,7 +10,7 @@
         class="card-face absolute w-full h-full bg-black rounded-2xl text-white flex flex-col justify-center items-center"
       >
         <div class="text-lg font-medium text-center px-6">
-          {{ item[0] }}
+          {{ item.question }}
         </div>
       </div>
 
@@ -18,7 +18,7 @@
         class="card-face card-back absolute w-full h-full bg-gray-800 rounded-2xl text-white flex flex-col justify-center items-center"
       >
         <div class="text-lg font-medium text-center px-6">
-          {{ item[1] }}
+          {{ item.answer }}
         </div>
       </div>
       }
