refactor: refactor the sidebar template structure to use RouterLinkActive

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,14 +3,18 @@
     <ul class="flex flex-col gap-2.5">
       <li class="flex gap-1">
         <i-lucide [img]="getIconByName('plus')"></i-lucide>
-        <a [routerLink]="['contents/add']" class="hover:text-blue-500"
+        <a
+          [routerLink]="['contents/add']"
+          [routerLinkActive]="['text-blue-500']"
           >Adicionar conteúdo</a
         >
       </li>
       <li>
         <div class="flex gap-1 items-center">
           <i-lucide [img]="getIconByName('calendarClock')"></i-lucide>
-          <a routerLink="/reviews/today" class="hover:text-blue-500"
+          <a
+            [routerLink]="['/reviews/today']"
+            [routerLinkActive]="['text-blue-500']"
             >Revisões para hoje</a
           >
           <div
@@ -23,7 +27,9 @@
       <li>
         <div class="flex items-center gap-1">
           <i-lucide [img]="getIconByName('annoyed')"></i-lucide>
-          <a routerLink="reviews/forget" class="hover:text-blue-500"
+          <a
+            [routerLink]="['/reviews/forget']"
+            [routerLinkActive]="['text-blue-500']"
             >Revisões esquecidas</a
           >
           <div
@@ -36,7 +42,9 @@
       <li>
         <div class="flex items-center gap-1">
           <i-lucide [img]="getIconByName('swords')"></i-lucide>
-          <a routerLink="reviews/with-cards" class="hover:text-blue-500"
+          <a
+            [routerLink]="['/reviews/with-cards']"
+            [routerLinkActive]="['text-blue-500']"
             >Revisões com cards</a
           >
         </div>
