feat: implement audio recording feature

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -49,6 +49,13 @@
           >
         </div>
       </li>
+      <li>
+        <div class="flex items-center gap-1">
+          <a [routerLink]="['/audio']" [routerLinkActive]="['text-blue-500']"
+            >Testes gravar audio</a
+          >
+        </div>
+      </li>
     </ul>
   </nav>
 </div>
