--- a/src/app/components/revisoes-hoje/revisoes-hoje.component.html
+++ b/src/app/components/revisoes-hoje/revisoes-hoje.component.html
@@ -170,6 +170,15 @@
           </td>
         </tr>
         }
+        <!--
+        Estava usando para teste
+        <button
+          class="bg-blue-600 text-white rounded px-4 py-2 text-sm cursor-pointer hover:bg-blue-700 transition-colors"
+          (click)="reviewWithCard()"
+        >
+          Revisão com cards
+        </button>
+        -->
       </tbody>
     </table>
   </div>
